--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -4,20 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Named Entity Recognition (NER)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/NER.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Named Entity Recognition (NER)\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/NER.ipynb)\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -44,61 +34,26 @@
     "    \n",
     "    6.2. [Train your model from CLI](#6.2-Train-your-model-from-CLI)\n",
     "\n",
-    "7. [NER-tags list](#7.-NER-tags-list)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "7. [NER-tags list](#7.-NER-tags-list)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "**Named Entity Recognition (NER)** is a task of assigning a tag (from a predefined set of tags) to each token in a given sequence. In other words, NER-task consists of identifying named entities in the text and classifying them into types (e.g. person name, organization, location etc). \n",
     "\n",
     "**BIO encoding schema** is usually used in NER task. It uses 3 tags: B for the beginning of the entity, I for the inside of the entity, and O for non-entity tokens. The second part of the tag stands for the entity type.\n",
     "\n",
-    "Here is an example of a tagged sequence:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Here is an example of a tagged sequence:\n",
+    "\n",
     "| Elon | Musk | founded | Tesla| in | 2003 | . |\n",
     "| --- | --- | --- | --- | --- | --- | --- |\n",
-    "| B-PER | I-PER | O | B-ORG | O | B-DATE | O |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we can see three extracted named entities: *Elon Musk* (which is a person's name), *Tesla* (which is a name of an organization) and *2003* (which is a date). To see more examples try out our [Demo](https://demo.deeppavlov.ai/#/en/ner)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The list of possible types of NER entities may vary depending on your dataset domain. The list of tags used in DeepPavlov's models can be found in the [table](#7.-NER-tags-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| B-PER | I-PER | O | B-ORG | O | B-DATE | O |\n",
+    "\n",
+    "Here we can see three extracted named entities: *Elon Musk* (which is a person's name), *Tesla* (which is a name of an organization) and *2003* (which is a date). To see more examples try out our [Demo](https://demo.deeppavlov.ai/#/en/ner).\n",
+    "\n",
+    "The list of possible types of NER entities may vary depending on your dataset domain. The list of tags used in DeepPavlov's models can be found in the [table](#7.-NER-tags-list).\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -137,27 +92,12 @@
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
     "The full list of NER models with their config names can be found in the [table](#3.-Models-list).\n",
     "\n",
-    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the NER-models available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the NER-models available in the DeepPavlov Library.\n",
+    "\n",
     "| Config name | Dataset | Language | Model Size | F1 score (ner_f1) | F1 score (ner_f1_token) |\n",
     "| :--- | --- | --- | --- | --- | ---: |\n",
     "| ner_case_agnostic_mdistilbert| [CoNLL-2003](https://paperswithcode.com/dataset/conll-2003)   | En | 1.6 GB | 89.9 | 91.6 |\n",
@@ -168,28 +108,13 @@
     "| ner_rus_convers_distilrubert_2L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.3 GB | 92.9 | 96.6 |\n",
     "| ner_rus_convers_distilrubert_6L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.6 GB | 96.7 | 98.5 |\n",
     "| ner_rus_bert_probas | [Wiki-NER-rus](https://aclanthology.org/I17-1042/) | Ru | 2.1 GB | 72.6 | 79.5 |\n",
-    "| ner_ontonotes_bert_mult | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | Multi | 2.1 GB | 88.9 | 92.0 |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| ner_ontonotes_bert_mult | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | Multi | 2.1 GB | 88.9 | 92.0 |\n",
     "\n",
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
@@ -210,13 +135,8 @@
    "source": [
     "The `download` argument defines whether it is necessary to download the files defined in the `download` section of the config: usually it provides the links to the train and test data, to the pretrained models, or to the embeddings.\n",
     "\n",
-    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Setting the `install` argument to `True` is equivalent to executing the command line `install` command. If set to `True`, it will first install all the required packages.\n",
+    "\n",
     "**Input**: List[sentences]\n",
     "\n",
     "**Output**: List[tokenized sentences, corresponding NER-tags]"
@@ -249,13 +169,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -272,13 +187,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
     "Or make predictions for samples from *stdin*."
    ]
   },
@@ -295,24 +205,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Evaluate "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 5. Evaluate\n",
+    "\n",
     "There are two metrics that are used to evaluate a NER model in DeepPavlov:\n",
     "\n",
     "`ner_f1` is measured on the entity-level (actual text spans should match exactly)\n",
     "\n",
-    "`ner_token_f1` is measured on a token level (correct tokens from not fully extracted entities will still be counted as TPs (true positives))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`ner_token_f1` is measured on a token level (correct tokens from not fully extracted entities will still be counted as TPs (true positives))\n",
+    "\n",
     "## 5.1 Evaluate from Python"
    ]
   },
@@ -347,27 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1 Train your model from Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Provide your data path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 6. Customize the model\n",
+    "\n",
+    "## 6.1 Train your model from Python\n",
+    "\n",
+    "### Provide your data path\n",
+    "\n",
     "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
     " \n",
     "Parse the *config_file* and change the path to your data from Python."
@@ -429,20 +314,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Train dataset format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To train the model, you need to have a txt-file with a dataset in the following format:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Train dataset format\n",
+    "\n",
+    "To train the model, you need to have a txt-file with a dataset in the following format:\n",
+    "\n",
     "```\n",
     "EU B-ORG\n",
     "rejects O\n",
@@ -466,20 +341,10 @@
     "Taiwan B-LOC\n",
     "talks O\n",
     ". O\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The source text is **tokenized** and **tagged**. For each token, there is a tag with **BIO** markup. Tags are separated from tokens with **whitespaces**. Sentences are separated with **empty lines**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
+    "The source text is **tokenized** and **tagged**. For each token, there is a tag with **BIO** markup. Tags are separated from tokens with **whitespaces**. Sentences are separated with **empty lines**.\n",
+    "\n",
     "\n",
     "### Train the model using new config"
    ]
