--- a/docs/features/models/ODQA.ipynb
+++ b/docs/features/models/ODQA.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ODQA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### ODQA\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -29,20 +24,10 @@
     "\n",
     "    5.1 [Description of config parameters](#5.1-Description-of-config-parameters)\n",
     "    \n",
-    "    5.2 [Building the index and training the reader model](#5.2-Building-the-index-and-training-the-reader-model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    5.2 [Building the index and training the reader model](#5.2-Building-the-index-and-training-the-reader-model)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "**Open Domain Question Answering (ODQA)** is a task to find an exact answer\n",
     "to any question in **Wikipedia** articles. Thus, given only a question, the system outputs\n",
     "the best answer it can find.\n",
@@ -55,27 +40,12 @@
     "- a database of paragraphs (by default, from Wikipedia) which finds N + K most relevant paragraph text by IDs, defined by TF-IDF and BPR ranker;\n",
     "- Reading Comprehension component, which finds answers in paragraphs and defines answer confidences.\n",
     "\n",
-    "Russian ODQA version performs retrieval only with TF-IDF index."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Binary Passage Retrieval is resource-efficient the method of building a dense passage index. The dual encoder (with BERT or other Tranformer as backbone) is trained on question answering dataset (Natural Questions in our case) to maximize dot product of question and passage with answer embeddings and minimize otherwise. The question or passage embeddings are obtained the following way: vector of BERT CLS-token is fed into a dense layer followed by a hash function which turns dense vector into binary one."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Russian ODQA version performs retrieval only with TF-IDF index.\n",
+    "\n",
+    "Binary Passage Retrieval is resource-efficient the method of building a dense passage index. The dual encoder (with BERT or other Tranformer as backbone) is trained on question answering dataset (Natural Questions in our case) to maximize dot product of question and passage with answer embeddings and minimize otherwise. The question or passage embeddings are obtained the following way: vector of BERT CLS-token is fed into a dense layer followed by a hash function which turns dense vector into binary one.\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -113,69 +83,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the ODQA models available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the ODQA models available in the DeepPavlov Library.\n",
+    "\n",
     "| Config | Description |\n",
     "| :--- | :--- |\n",
     "| odqa/en_odqa_infer_wiki.json | Basic config for **English** language. Consists of of Binary Passage Retrieval, TF-IDF retrieval and reader. |\n",
     "| odqa/en_odqa_pop_infer_wiki.json | Extended config for **English** language. Consists of of Binary Passage Retrieval, TF-IDF retrieval, popularity ranker and reader. |\n",
-    "| odqa/ru_odqa_infer_wiki.json | Basic config for **Russian** language. Consists of TF-IDF ranker and reader. |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents the scores on Natural Questions and SberQuAD dataset and memory consumption."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| odqa/ru_odqa_infer_wiki.json | Basic config for **Russian** language. Consists of TF-IDF ranker and reader. |\n",
+    "\n",
+    "The table presents the scores on Natural Questions and SberQuAD dataset and memory consumption.\n",
+    "\n",
     "| Config | Number of<br>paragraphs | Dataset | F1 | EM | RAM | GPU | Time for <br> 1 query |\n",
     "| :--- | :---: | :--- | :---: | :---: | :---: | :---: | :---: |\n",
     "| odqa/en_odqa_infer_wiki.json | 200 | Natural Questions | 45.2 | 37.0 | 10.4 | 2.4 | 4.9 s |\n",
-    "| odqa/ru_odqa_infer_wiki.json | 100 | SberQuAD | 59.2 | 49.0 | 13.1 | 5.3 | 2.0 s |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| odqa/ru_odqa_infer_wiki.json | 100 | SberQuAD | 59.2 | 49.0 | 13.1 | 5.3 | 2.0 s |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
     "### English"
    ]
   },
@@ -255,13 +185,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -278,27 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.1 Description of config parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
+    "# 5. Customize the model\n",
+    "\n",
+    "## 5.1 Description of config parameters\n",
+    "\n",
     "Parameters of ``bpr`` component:\n",
     "    \n",
     "- ``load_path`` - path with checkpoint of query encoder and bpr index;\n",
@@ -306,42 +216,22 @@
     "- ``bpr_index`` - filename with BPR index (matrix of paragraph binary vectors);\n",
     "- ``pretrained_model`` - Transformer model, used in query encoder;\n",
     "- ``max_query_length`` - maximal length (in sub-tokens) of the input to the query encoder;\n",
-    "- ``top_n`` - how many paragraph IDs to return per a question."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``top_n`` - how many paragraph IDs to return per a question.\n",
+    "\n",
     "Parameters of ``tfidf_ranker`` component:\n",
     "\n",
-    "- ``top_n`` - how many paragraph IDs to return per a question."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``top_n`` - how many paragraph IDs to return per a question.\n",
+    "\n",
     "Parameters of ``logit_ranker`` component:\n",
     "\n",
     "- ``batch_size`` - the paragraphs from the database (some of which contain the answer to the question, others - do not contain) will be split into batches with the size ``batch_size`` for extraction of candidate answer in each paragraph;\n",
     "- ``squad_model`` - the model which finds spans of an answer in a paragraph;\n",
     "- ``sort_noans`` - whether to put paragraphs with no answer in the end of paragraph list, sorted by confidences;\n",
     "- ``top_n`` - the number of possible answers for a question;\n",
-    "- ``return_answer_sentence`` - whether to return the sentence from the paragraph with the answer."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.2 Building the index and training the reader model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``return_answer_sentence`` - whether to return the sentence from the paragraph with the answer.\n",
+    "\n",
+    "## 5.2 Building the index and training the reader model\n",
+    "\n",
     "There are two customizable components in ODQA configs:\n",
     "\n",
     "- TF-IDF ranker;\n",
