--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -4,27 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classification"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Classification\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)\n",
+    "\n",
+    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)\n",
+    "\n",
     "# Table of contents\n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -57,13 +42,8 @@
     "\n",
     "    7.2. [Multiple languages support](#7.2-Multiple-languages-support)\n",
     "\n",
-    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)\n",
+    "\n",
     "# 1. Introduction to the task\n",
     "This section describes a family of BERT-based models that solve a variety of different classification tasks.\n",
     "\n",
@@ -113,27 +93,12 @@
     "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of classification models with their config names can be found in the [table](#3.-Models-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the classification models available in DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The full list of classification models with their config names can be found in the [table](#3.-Models-list).\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the classification models available in DeepPavlov Library.\n",
+    "\n",
     "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
     "| :--- | --- | --- | --- | --- | --- | ---: |\n",
     "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
@@ -144,27 +109,12 @@
     "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
     "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
     "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
-    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
@@ -212,13 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
