--- a/docs/features/models/entity_extraction.ipynb
+++ b/docs/features/models/entity_extraction.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Entity Extraction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Entity Extraction\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -31,20 +26,10 @@
     "    \n",
     "    5.2 [Training entity detection model](#5.2-Training-entity-detection-model)\n",
     "    \n",
-    "    5.3 [Using custom knowledge base](#5.3-Using-custom-knowledge-base)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    5.3 [Using custom knowledge base](#5.3-Using-custom-knowledge-base)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "**Entity Detection** is the task of identifying entity mentions in text with corresponding entity types. Entity Detection models in DeepPavlov split the input text into fragments of the lengths less than 512 tokens and find entities with BERT-based models.\n",
     "\n",
     "**Entity Linking** is the task of finding knowledge base entity ids for entity mentions in text. Entity Linking in DeepPavlov supports Wikidata and Wikipedia. Entity Linking component performs the following steps:\n",
@@ -54,20 +39,10 @@
     "* ranking of candidate entities by connections in Wikidata knowledge graph of candidate entities for different mentions;\n",
     "* candidate entities ranking by context and descriptions using Transformer model [bert-small](https://huggingface.co/prajjwal1/bert-small) in English config and [distilrubert-tiny](https://huggingface.co/DeepPavlov/distilrubert-tiny-cased-conversational-v1).\n",
     "\n",
-    "**Entity Extraction** configs perform subsequent Entity Detection and Entity Linking of extracted entity mentions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "**Entity Extraction** configs perform subsequent Entity Detection and Entity Linking of extracted entity mentions.\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -104,27 +79,12 @@
     "`entity_extraction_en` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.\n",
-    "The full list of models for entity detection, linking and extraction with their config names can be found in the [table](#3.-Models-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the models for entity detection, linking and extraction available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The full list of models for entity detection, linking and extraction with their config names can be found in the [table](#3.-Models-list).\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the models for entity detection, linking and extraction available in the DeepPavlov Library.\n",
+    "\n",
     "| Config name | Language | RAM | GPU |\n",
     "| :--- | --- | --- | --- |\n",
     "| entity_detection_en | En | 2.5 Gb | 3.7 Gb |\n",
@@ -132,41 +92,16 @@
     "| entity_linking_en | En | 2.4 Gb | 1.2 Gb |\n",
     "| entity_linking_ru | Ru | 2.2 Gb | 1.1 Gb |\n",
     "| entity_extraction_en | En | 2.5 Gb | 3.7 Gb |\n",
-    "| entity_extraction_ru | Ru | 2.5 Gb | 5.3 Gb |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Entity Detection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| entity_extraction_ru | Ru | 2.5 Gb | 5.3 Gb |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
+    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict.\n",
+    "\n",
+    "### Entity Detection\n",
+    "\n",
     "**For English:**"
    ]
   },
@@ -241,13 +176,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Entity Linking"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Entity Linking\n",
+    "\n",
     "**For English:**"
    ]
   },
@@ -322,13 +252,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Entity Extraction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Entity Extraction\n",
+    "\n",
     "**For English:**"
    ]
   },
@@ -387,13 +312,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -410,54 +330,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.1 Description of config parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 5. Customize the model\n",
+    "\n",
+    "## 5.1 Description of config parameters\n",
+    "\n",
     "Parameters of ``ner_chunker`` component:\n",
     "\n",
     "- ``batch_size: int`` - each text from the input text batch is split into chunks with the length lower than the threshold (because Transformer-based models for entity detection work with limited lengths of the input sequences), than all chunks are concatenated into one list and the list is split into batches of the size ``batch_size``;\n",
     "- ``max_seq_len: int`` - maximum length of chunk (in wordpiece tokens);\n",
-    "- ``vocab_file: str`` - vocab file of Transformer tokenizer, which is used to tokenize the text for further splitting into chunks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``vocab_file: str`` - vocab file of Transformer tokenizer, which is used to tokenize the text for further splitting into chunks.\n",
+    "\n",
     "Parameters of ``entity_detection_parser`` component:\n",
     "    \n",
     "- ``thres_proba: float`` - the NER models return tag confidences for each token; if the probability of \"O\" tag (which is used for tokens not related to entities) for the token is lower than the ``thres_proba``, the tag with the maximum probability from entity tags list is chosen;\n",
     "- ``o_tag: str`` - tag for non-entity tokens (by default is \"O\" tag);\n",
-    "- ``tags_file: str`` - the filename with the list of tags used in the NER model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``tags_file: str`` - the filename with the list of tags used in the NER model.\n",
+    "\n",
     "Parameters of ``ner_chunk_model`` component:\n",
     "\n",
     "- ``ner: deeppavlov.core.common.chainer:Chainer`` - the config for entity recognition, which defines entity tags (or \"O\" tag) and tag probabilities for each token in the input text;\n",
     "- ``ner_parser: deeppavlov.models.entity_extraction.entity_detection_parser:EntityDetectionParser`` - the component which processes the tags and tag probabilities returned by the entity recognition model and defines entity substrings;\n",
     "- ``ner2: deeppavlov.core.common.chainer:Chainer`` - (optional) an additional entity recognition config, which can improve the quality of entity recognition in the case of joint usage with ``ner`` config;\n",
-    "- ``ner_parser2: deeppavlov.models.entity_extraction.entity_detection_parser:EntityDetectionParser`` - (optional) an additional config for processing entity recognition output."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``ner_parser2: deeppavlov.models.entity_extraction.entity_detection_parser:EntityDetectionParser`` - (optional) an additional config for processing entity recognition output.\n",
+    "\n",
     "Parameters of ``entity_linker`` component:\n",
     "\n",
     "- ``load_path: str`` - the path to the folder with the inverted index;\n",
@@ -477,34 +372,14 @@
     "- ``full_paragraph: bool`` - whether to use full context for ranking of entities by descriptions or cut the paragraph to one sentence with entity mention;\n",
     "- ``use_connections: bool`` - whether to use connections between candidate entities for different mentions for ranking;\n",
     "- ``kb_filename: str`` - file with the knowledge base in .hdt format;\n",
-    "- ``prefixes: Dict[str, Any]`` - prefixes in the knowledge base for entities and relations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.2 Training entity detection model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The configs `entity_detection_en` and `entity extraction_en` use `ner_ontonotes_bert` model for detection of entity mentions, the configs `entity_detection_ru` and `entity extraction_ru` use `ner_rus_bert_probas` model. [How to train a NER model](http://docs.deeppavlov.ai/en/master/features/models/NER.html#6.-Customize-the-model)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.3 Using custom knowledge base"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``prefixes: Dict[str, Any]`` - prefixes in the knowledge base for entities and relations.\n",
+    "\n",
+    "## 5.2 Training entity detection model\n",
+    "\n",
+    "The configs `entity_detection_en` and `entity extraction_en` use `ner_ontonotes_bert` model for detection of entity mentions, the configs `entity_detection_ru` and `entity extraction_ru` use `ner_rus_bert_probas` model. [How to train a NER model](http://docs.deeppavlov.ai/en/master/features/models/NER.html#6.-Customize-the-model).\n",
+    "\n",
+    "## 5.3 Using custom knowledge base\n",
+    "\n",
     "The database filename is defined with the **entities_database_filename** in entity linking configs. The file is in SQLite format with FTS5 extensions for full-text search of entities by entity mention. The database file should contain the **inverted_index** table with the following columns:\n",
     "\n",
     "* ``title`` - entity title (name or alias) in the knowledge base;\n",
