--- a/docs/features/models/morpho_tagger.ipynb
+++ b/docs/features/models/morpho_tagger.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Morphotagger"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Morphotagger\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -25,27 +20,12 @@
     "\n",
     "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "5. [Customize the model](#4.-Customize-the-model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Morphological tagging is definition morphological tags, such as case, number, gender, aspect etc. for text tokens."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "5. [Customize the model](#4.-Customize-the-model)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
+    "Morphological tagging is definition morphological tags, such as case, number, gender, aspect etc. for text tokens.\n",
+    "\n",
     "An example:\n",
     "```\n",
     "Я шёл домой по незнакомой улице.\n",
@@ -58,28 +38,13 @@
     "5\tнезнакомой\tнезнакомый\tADJ\t_\tCase=Dat|Degree=Pos|Gender=Fem|Number=Sing\t_\t_\t_\t_\n",
     "6\tулице\tулица\tNOUN\t_\tAnimacy=Inan|Case=Dat|Gender=Fem|Number=Sing\t_\t_\t_\t_\n",
     "7\t.\t.\tPUNCT\t_\t_\t_\t_\t_\t_\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "The model is based on [BERT for token classification](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoModelForTokenClassification).\n",
-    "The model is trained on [Universal Dependencies corpora](https://universaldependencies.org/) (version 2.3)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The model is trained on [Universal Dependencies corpora](https://universaldependencies.org/) (version 2.3).\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -113,37 +78,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents comparison of ``morpho_ru_syntagrus_bert`` config with other models on UD2.3 dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 3. Models list\n",
+    "\n",
+    "The table presents comparison of ``morpho_ru_syntagrus_bert`` config with other models on UD2.3 dataset.\n",
+    "\n",
     "| Model | Accuracy |\n",
     "| :--- | :---: |\n",
     "| UDPipe | 93.5 |\n",
-    "| morpho_ru_syntagrus_bert | 97.6 |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| morpho_ru_syntagrus_bert | 97.6 |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
     "## 4.1 Predict using Python"
    ]
   },
@@ -200,13 +145,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -223,20 +163,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
+    "# 5. Customize the model\n",
+    "\n",
     "To train **morphotagger** on your own data, you should prepare a dataset in **CoNLL-U format**. The description of **CoNLL-U format** can be found [here](https://universaldependencies.org/format.html#conll-u-format).\n",
     "\n",
     "Then you should place files for training, validation and testing into the ``\"data_path\"`` directory of ``morphotagger_dataset_reader``, change file names in ``morphotagger_dataset_reader`` to your filenames and launch the training:"
