--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Relation Extraction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Relation Extraction\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -35,20 +30,10 @@
     "\n",
     "    6.1 [Relations used in English model](#6.1-Relations-used-in-English-model)\n",
     "    \n",
-    "    6.2 [Relations used in Russian model](#6.2-Relations-used-in-Russian-model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    6.2 [Relations used in Russian model](#6.2-Relations-used-in-Russian-model)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "Relation extraction is the task of detecting and classifying the relationship between two entities in text.\n",
     "DeepPavlov provides the document-level relation extraction meaning that the relation can be detected between the entities that are not in one sentence.\n",
     "\n",
@@ -62,20 +47,10 @@
     "\n",
     "- Localised Context Pooling\n",
     "\n",
-    "The embedding of each entity pair is enhanced with an additional local context embedding related to both entities. Such representation, which is attended to the relevant context in the document, is useful to decide the relation for exactly this entity pair. For incorporating the context information the attention heads are directly used."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The embedding of each entity pair is enhanced with an additional local context embedding related to both entities. Such representation, which is attended to the relevant context in the document, is useful to decide the relation for exactly this entity pair. For incorporating the context information the attention heads are directly used.\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -109,37 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the relation extraction models available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the relation extraction models available in the DeepPavlov Library.\n",
+    "\n",
     "| Config | Language | Dataset |\n",
     "| :--- | :---: | :--- |\n",
     "| relation_extraction/re_docred.json | En | [DocRED](https://www.aclweb.org/anthology/P19-1074/) |\n",
-    "| relation_extraction/re_rured.json | Ru | [RuRED](http://www.dialog-21.ru/media/5093/gordeevdiplusetal-031.pdf) |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Some details on DocRED corpus English RE model was trained on"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| relation_extraction/re_rured.json | Ru | [RuRED](http://www.dialog-21.ru/media/5093/gordeevdiplusetal-031.pdf) |\n",
+    "\n",
+    "#### Some details on DocRED corpus English RE model was trained on\n",
+    "\n",
     "The English RE model was trained on DocRED English corpus. It was constructed from Wikipedia and Wikidata and is now the largest human-annotated dataset for document-level RE from plain text.\n",
     "\n",
     "As the original DocRED test dataset containes only unlabeled data, while we want to have labeled one in order to perform evaluation, we decided to:\n",
@@ -163,20 +118,10 @@
     "\n",
     "| Train Positive | Train Negative | Dev Positive   | Dev Negative   | Test Positive  | Test Negative  |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: |\n",
-    "| 44823          | 89214          | 1239           | 1229           | 1043           | 1036           |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Some details on RuRED corpus Russian RE model was trained on"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| 44823          | 89214          | 1239           | 1229           | 1043           | 1036           |\n",
+    "\n",
+    "#### Some details on RuRED corpus Russian RE model was trained on\n",
+    "\n",
     "In case of RuRED we used the train, dev and test sets from the original RuRED setting. We additionally generate negative samples if it was necessary to have the following proportions:\n",
     "\n",
     "- for train set: negative samples are twice as many as positive ones\n",
@@ -188,27 +133,12 @@
     "\n",
     "| Train Positive | Train Negative | Dev Positive | Dev Negative | Test Positive | Test Negative |\n",
     "| :---: | :---: | :---: | :---: | :---: | :---: |\n",
-    "| 4285           | 8570           | 538          | 538          | 536           | 536           |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| 4285           | 8570           | 538          | 538          | 536           | 536           |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
     "### English"
    ]
   },
@@ -251,27 +181,12 @@
     "\n",
     "- list of tokens of a text document\n",
     "- list of entities positions (i.e. all start and end positions of both entities' mentions)\n",
-    "- list of NER tags of both entities."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As NER tags, we adapted the used in the DocRED corpus, which are, in turn, inherited from [Tjong Kim Sang and De Meulder(2003)](https://aclanthology.org/W03-0419/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**The whole list of 6 English NER tags**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- list of NER tags of both entities.\n",
+    "\n",
+    "As NER tags, we adapted the used in the DocRED corpus, which are, in turn, inherited from [Tjong Kim Sang and De Meulder(2003)](https://aclanthology.org/W03-0419/)\n",
+    "\n",
+    "**The whole list of 6 English NER tags**\n",
+    "\n",
     "| Tag | Description |\n",
     "| :--- | :--- |\n",
     "|PER | People, including fictional |\n",
@@ -279,20 +194,10 @@
     "|LOC    | Geographically defined locations, including mountains, waters, etc. <br> Politically defined locations, including countries, cities, states, streets, etc. <br> Facilities, including buildings, museums, stadiums, hospitals, factories, airports, etc.       |\n",
     "|TIME   | Absolute or relative dates or periods.                                                         |\n",
     "|NUM    | Percents, money, quantities                                                                    |\n",
-    "|MISC   | Products, including vehicles, weapons, etc. <br> Events, including elections, battles, sporting MISC events, etc. Laws, cases, languages, etc.   |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Model Output**: one or several of the [97 relations](#5.1-Relations-used-in-English-model) found between the given entities; relation id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P26') and relation name ('spouse')."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "|MISC   | Products, including vehicles, weapons, etc. <br> Events, including elections, battles, sporting MISC events, etc. Laws, cases, languages, etc.   |\n",
+    "\n",
+    "**Model Output**: one or several of the [97 relations](#5.1-Relations-used-in-English-model) found between the given entities; relation id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P26') and relation name ('spouse').\n",
+    "\n",
     "### Russian"
    ]
   },
@@ -335,98 +240,43 @@
     "\n",
     "- list of tokens of a text document\n",
     "- list of entities positions (i.e. all start and end positions of both entities' mentions)\n",
-    "- list of NER tags of both entities."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Model Output**: one or several of the [30 relations](#5.2-Relations-used-in-Russian-model) found between the given entities; a Russian relation name (e.g. \"участник\") or an English one, if Russian one is unavailable, and, if applicable, its id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P710')."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.1 Description of config parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- list of NER tags of both entities.\n",
+    "\n",
+    "**Model Output**: one or several of the [30 relations](#5.2-Relations-used-in-Russian-model) found between the given entities; a Russian relation name (e.g. \"участник\") or an English one, if Russian one is unavailable, and, if applicable, its id in [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page) (e.g. 'P710').\n",
+    "\n",
+    "# 5. Customize the model\n",
+    "\n",
+    "## 5.1 Description of config parameters\n",
+    "\n",
     "Parameters of ``re_preprocessor`` component:\n",
     "\n",
     "- ``ner_tags: List[str]`` - ner tags of the entities, which are one-hot encoded and concatenated to entity embeddings in the output of the Transformer;\n",
     "- ``special_token: str`` - the token which is added before and after the entities (subject and object in the triplet) mentions;\n",
     "- ``default_tag: str`` - default ner tags, if no tags are provided;\n",
-    "- ``do_lower_case: bool`` - set True if lowercasing is needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``do_lower_case: bool`` - set True if lowercasing is needed.\n",
+    "\n",
     "Parameters of ``re_classifier`` component:\n",
     "\n",
     "- ``n_classes: int`` - number of relations which the model supports;\n",
     "- ``num_ner_tags: int`` - number of ner tags;\n",
-    "- ``return_probas: bool`` - whether to return confidences of predicted relations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``return_probas: bool`` - whether to return confidences of predicted relations.\n",
+    "\n",
     "Parameters of ``re_postprocessor`` component:\n",
     "    \n",
     "- ``rel2id_path: str`` - the file with mapping of relation IDs in the knowledge base to relation number (for example, \"P19\": 24);\n",
-    "- ``rel2label_path: str`` - the file with mapping of relation IDs to relation labels."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.2 Train Relation Extraction on custom data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``rel2label_path: str`` - the file with mapping of relation IDs to relation labels.\n",
+    "\n",
+    "## 5.2 Train Relation Extraction on custom data\n",
+    "\n",
     "There are two kinds of dataset readers for relation extraction in DeepPavlov library:\n",
     "\n",
     "- ``docred_reader``, which takes into account partition of the text into sentences and several mentions in the text for one entity;\n",
-    "- ``rured_reader``, a simplified dataset reader."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Train with ``docred_reader``"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You should prepare **train_annotated.json**, **dev.json**, **test.json** in the following format:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- ``rured_reader``, a simplified dataset reader.\n",
+    "\n",
+    "### Train with ``docred_reader``\n",
+    "\n",
+    "You should prepare **train_annotated.json**, **dev.json**, **test.json** in the following format:\n",
+    "\n",
     "    {\n",
     "      \"vertexSet\": [\n",
     "        [\n",
@@ -462,20 +312,10 @@
     "        ...\n",
     "      ],\n",
     "      ...\n",
-    "    }  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For example,"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    }\n",
+    "\n",
+    "For example,\n",
+    "\n",
     "    {\n",
     "      \"vertexSet\": [\n",
     "        [\n",
@@ -507,20 +347,10 @@
     "      \"sentences\": [\n",
     "        [\"Elon\", \"Musk\", \"lives\", \"in\", \"Seattle\", \".\"]\n",
     "      ]\n",
-    "    }  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Train with  ``rured_reader``"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    }\n",
+    "\n",
+    "### Train with  ``rured_reader``\n",
+    "\n",
     "You should prepare **train.json**, **dev.json**, **test.json** in the following format:\n",
     "\n",
     "    {\n",
@@ -545,13 +375,8 @@
     "        \"obj_end\": 5,\n",
     "        \"subj_type\": \"PERSON\",\n",
     "        \"obj_type\": \"CITY\"\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    }\n",
+    "\n",
     "#### Train the model using Python:"
    ]
   },
