--- a/docs/features/models/spelling_correction.ipynb
+++ b/docs/features/models/spelling_correction.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Spelling correction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Spelling correction\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -31,20 +26,10 @@
     "\n",
     "    5.2. [Language model](#5.2-Language-model)\n",
     "\n",
-    "6. [Comparison](#6.-Comparison)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "6. [Comparison](#6.-Comparison)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "Spelling correction is detection of words in the text with spelling errors and replacement them with correct ones.\n",
     "\n",
     "For example, the sentence\n",
@@ -57,20 +42,10 @@
     "\n",
     "```\n",
     "The platypus lives in eastern Australia, including Tasmania.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -107,37 +82,17 @@
     "`brillmoore_wikitypos_en` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.\n",
-    "The full list of models for spelling correction with their config names can be found in the [table](#3.-Models-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the models for entity detection, linking and extraction available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The full list of models for spelling correction with their config names can be found in the [table](#3.-Models-list).\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the models for entity detection, linking and extraction available in the DeepPavlov Library.\n",
+    "\n",
     "| Config name | Language | RAM |\n",
     "| :--- | --- | --- |\n",
     "| brillmoore_wikitypos_en | En | 6.7 Gb |\n",
-    "| levenshtein_corrector_ru | Ru | 8.7 Gb |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| levenshtein_corrector_ru | Ru | 8.7 Gb |\n",
+    "\n",
     "We provide two types of pipelines for spelling correction:\n",
     "\n",
     "* [levenshtein_corrector](#Levenshtein-corrector) uses simple Damerau-Levenshtein distance to find correction candidates\n",
@@ -146,41 +101,16 @@
     "\n",
     "In both cases correction candidates are chosen based on context with the help of a [kenlm language model](https://docs.deeppavlov.ai/en/master/features/models/spelling_correction.html#language-model).\n",
     "\n",
-    "You can find [the comparison](#6.-Comparison) of these and other approaches near the end of this readme."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.1.1 Levenshtein corrector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[This component](https://docs.deeppavlov.ai/en/master/apiref/models/spelling_correction.html#deeppavlov.models.spelling_correction.levenshtein.LevenshteinSearcherComponent) finds all the candidates in a static dictionary on a set Damerau-Levenshtein distance. It can separate one token into two but it will not work the other way around."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "You can find [the comparison](#6.-Comparison) of these and other approaches near the end of this readme.\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
+    "### 4.1.1 Levenshtein corrector\n",
+    "\n",
+    "[This component](https://docs.deeppavlov.ai/en/master/apiref/models/spelling_correction.html#deeppavlov.models.spelling_correction.levenshtein.LevenshteinSearcherComponent) finds all the candidates in a static dictionary on a set Damerau-Levenshtein distance. It can separate one token into two but it will not work the other way around.\n",
+    "\n",
     "**Component config parameters**:\n",
     "\n",
     "-  ``in`` — list with one element: name of this component's input in\n",
@@ -226,20 +156,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1.2 Brillmoore"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[This component](https://docs.deeppavlov.ai/en/master/apiref/models/spelling_correction.html#deeppavlov.models.spelling_correction.brillmoore.ErrorModel) is based on [An Improved Error Model for Noisy Channel Spelling Correction](http://www.aclweb.org/anthology/P00-1037) by Eric Brill and Robert C. Moore and uses statistics based error model to find best candidates in a static dictionary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### 4.1.2 Brillmoore\n",
+    "\n",
+    "[This component](https://docs.deeppavlov.ai/en/master/apiref/models/spelling_correction.html#deeppavlov.models.spelling_correction.brillmoore.ErrorModel) is based on [An Improved Error Model for Noisy Channel Spelling Correction](http://www.aclweb.org/anthology/P00-1037) by Eric Brill and Robert C. Moore and uses statistics based error model to find best candidates in a static dictionary.\n",
+    "\n",
     "**Component config parameters:**\n",
     "\n",
     "-  ``in`` — list with one element: name of this component's input in\n",
@@ -307,13 +227,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -330,20 +245,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.1 Training configuration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 5. Customize the model\n",
+    "\n",
+    "## 5.1 Training configuration\n",
+    "\n",
     "For the training phase config file needs to also include these\n",
     "parameters:\n",
     "\n",
@@ -374,36 +279,16 @@
     "Component's configuration for ``spelling_error_model`` also has to\n",
     "have as ``fit_on`` parameter — list of two elements:\n",
     "names of component's input and true output in chainer's shared\n",
-    "memory."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.2 Language model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "memory.\n",
+    "\n",
+    "## 5.2 Language model\n",
+    "\n",
     "Provided pipelines use [KenLM](http://kheafield.com/code/kenlm/) to process language models, so if you want to build your own, we suggest you consult its website. We do also provide our own language models for\n",
     "[english](http://files.deeppavlov.ai/lang_models/en_wiki_no_punkt.arpa.binary.gz) (5.5GB) and\n",
-    "[russian](http://files.deeppavlov.ai/lang_models/ru_wiyalen_no_punkt.arpa.binary.gz) (3.1GB) languages."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 6. Comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[russian](http://files.deeppavlov.ai/lang_models/ru_wiyalen_no_punkt.arpa.binary.gz) (3.1GB) languages.\n",
+    "\n",
+    "# 6. Comparison\n",
+    "\n",
     "We compared our pipelines with\n",
     "[Yandex.Speller](http://api.yandex.ru/speller/),\n",
     "[JamSpell](https://github.com/bakwc/JamSpell) and\n",
