--- a/docs/features/models/syntax_parser.ipynb
+++ b/docs/features/models/syntax_parser.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Syntax Parser"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Syntax Parser\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -25,20 +20,10 @@
     "\n",
     "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "5. [Customize the model](#4.-Customize-the-model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "5. [Customize the model](#4.-Customize-the-model)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
     "Syntactic parsing is the task of prediction of the syntactic tree given the tokenized (or raw) sentence.\n",
     "\n",
     "To define a tree, for each word one should know its syntactic head and the dependency label for the edge between them.\n",
@@ -61,13 +46,8 @@
     "and who is the loser in the sentence *Manchester defeated Liverpool* one relies on the word order. However,\n",
     "many languages, such as Russian, Spanish and German, have relatively free word order, which means we need\n",
     "other cues. Note also that syntactic relations (`nsubj`, `obj` and so one) have clear semantic counterparts,\n",
-    "which makes syntactic parsing an appealing preprocessing step for the semantic-oriented tasks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "which makes syntactic parsing an appealing preprocessing step for the semantic-oriented tasks.\n",
+    "\n",
     "We use BERT as the lowest layer of our model (the embedder). To extract syntactic information we apply\n",
     "the biaffine network of [Dozat, Manning, 2017](https://arxiv.org/pdf/1611.01734.pdf).\n",
     "For each sentence of length `K` this network produces two outputs: the first is an array of shape ``K*(K+1)``,\n",
@@ -79,20 +59,10 @@
     "for each word in the sentence. However, the graph obtained in such a way may fail to be a valid tree:\n",
     "it may either contain a cycle or have multiple nodes with head at position 0.\n",
     "Therefore we apply the well-known Chu-Liu-Edmonds algorithm for minimal spanning tree\n",
-    "to return the optimal tree, using the open-source modification from [dependency_decoding package](https://pypi.org/project/ufal.chu-liu-edmonds/)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "to return the optimal tree, using the open-source modification from [dependency_decoding package](https://pypi.org/project/ufal.chu-liu-edmonds/).\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -126,77 +96,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the syntax parsing models available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the syntax parsing models available in the DeepPavlov Library.\n",
+    "\n",
     "| Config | Description |\n",
     "| :--- | :--- |\n",
     "| morpho_syntax_parser/syntax_ru_syntagrus_bert.json | Config with the model which defines for each token in the sentence <br> its head and dependency type in the syntactic tree. |\n",
-    "| morpho_syntax_parser/ru_syntagrus_joint_parsing | Config which unifies syntax parsing and morphological tagging. |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents comparison of syntax_ru_syntagrus_bert config with other models on UD2.3 dataset."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| morpho_syntax_parser/ru_syntagrus_joint_parsing | Config which unifies syntax parsing and morphological tagging. |\n",
+    "\n",
+    "The table presents comparison of syntax_ru_syntagrus_bert config with other models on UD2.3 dataset.\n",
+    "\n",
     "| Model | UAS | LAS |\n",
     "| :--- | :---: | :---: |\n",
     "| [UD Pipe 2.3](http://ufal.mff.cuni.cz/udpipe) (Straka et al., 2017)  | 90.3 | 89.0 |\n",
     "| [UD Pipe Future](https://github.com/CoNLL-UD-2018/UDPipe-Future) (Straka, 2018) | 93.0 | 91.5 |\n",
     "| [UDify (multilingual BERT)](https://github.com/hyperparticle/udify) (Kondratyuk, 2018) | 94.8 | 93.1 |\n",
-    "| Our BERT model (morpho_syntax_parser/syntax_ru_syntagrus_bert.json) | 94.9 | 93.4 |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So our model is the state-of-the-art system for Russian syntactic parsing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Syntax Parser"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| Our BERT model (morpho_syntax_parser/syntax_ru_syntagrus_bert.json) | 94.9 | 93.4 |\n",
+    "\n",
+    "So our model is the state-of-the-art system for Russian syntactic parsing.\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
+    "### Syntax Parser\n",
+    "\n",
     "Our model produces the output in [CONLL-U format](http://universaldependencies.org/format.html)\n",
     "and is trained on Universal Dependency corpora, available on http://universaldependencies.org/format.html .\n",
     "The example usage for inference is"
@@ -251,20 +176,10 @@
    "source": [
     "As prescribed by UD standards, our model writes the head information to the 7th column and the dependency\n",
     "information -- to the 8th. Our parser does not return morphological tags and even does not use them in\n",
-    "training."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Joint Syntax Parser and Morphological tagger"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "training.\n",
+    "\n",
+    "### Joint Syntax Parser and Morphological tagger\n",
+    "\n",
     "Our model in principle supports joint prediction of morphological tags and syntactic information, however, the quality of the joint model is slightly inferior to the separate ones. Therefore we release a special component that can combine the outputs of tagger and parser: `deeppavlov.models.syntax_parser.joint.JointTaggerParser`. Its sample output for the Russian language with default settings (see the configuration file `morpho_syntax_parser/ru_syntagrus_joint_parsing.json` for exact options) looks like"
    ]
   },
@@ -315,20 +230,10 @@
    "metadata": {},
    "source": [
     "In the basic case the model outputs a human-readable string with parse data for each information. If you need\n",
-    "to use the output in Python, consult the `deeppavlov.models.syntax_parser.joint.JointTaggerParser` and source code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "to use the output in Python, consult the `deeppavlov.models.syntax_parser.joint.JointTaggerParser` and source code.\n",
+    "\n",
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Сommand Line Interface)."
    ]
   },
@@ -345,20 +250,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Customize the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
+    "# 5. Customize the model\n",
+    "\n",
     "To train **syntax parser** on your own data, you should prepare a dataset in **CoNLL-U format**. The description of **CoNLL-U format** can be found [here](https://universaldependencies.org/format.html#conll-u-format).\n",
     "\n",
     "Then you should place files for training, validation and testing into the ``\"data_path\"`` directory of ``morphotagger_dataset_reader``, change file names in ``morphotagger_dataset_reader`` to your filenames and launch the training:"
