--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -4,27 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Context Question Answering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/SQuAD.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/developing-qa-systems-for-any-language-with-deeppavlov-a9033d5231a8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Context Question Answering\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/SQuAD.ipynb)\n",
+    "\n",
+    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/developing-qa-systems-for-any-language-with-deeppavlov-a9033d5231a8)\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -49,34 +34,14 @@
     "    \n",
     "    6.1. [from Python](#6.1-Evaluate-from-Python)\n",
     "    \n",
-    "    6.2. [from CLI](#6.2-Evaluate-from-CLI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Context Question Answering is a task of finding a fragment with an answer to a question in a given segment of context."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Context**:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    6.2. [from CLI](#6.2-Evaluate-from-CLI)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
+    "Context Question Answering is a task of finding a fragment with an answer to a question in a given segment of context.\n",
+    "\n",
+    "**Context**:\n",
+    "\n",
     "```\n",
     "In meteorology, precipitation is any product of the condensation \n",
     "of atmospheric water vapor that falls under gravity. The main forms \n",
@@ -84,51 +49,26 @@
     "Precipitation forms as smaller droplets coalesce via collision with \n",
     "other rain drops or ice crystals within a cloud. Short, intense periods \n",
     "of rain in scattered locations are called “showers”.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "**Question**:\n",
     "```\n",
     "Where do water droplets collide with ice crystals to form precipitation?\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "**Answer**: \n",
     "```\n",
     "within a cloud\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "Datasets that follow this task format:\n",
     "\n",
     "- [Stanford Question Answering Dataset (SQuAD) (EN)](https://rajpurkar.github.io/SQuAD-explorer/)\n",
     "\n",
-    "- [SberQuAD (RU)](https://paperswithcode.com/dataset/sberquad)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- [SberQuAD (RU)](https://paperswithcode.com/dataset/sberquad)\n",
+    "\n",
+    "# 2. Get started with the model\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -165,27 +105,12 @@
     "`squad_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of the models with their config names can be found in the [table](#6.-Models-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the Context Question Answering models available in DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The full list of the models with their config names can be found in the [table](#6.-Models-list).\n",
+    "\n",
+    "# 3. Models list\n",
+    "\n",
+    "The table presents a list of all of the Context Question Answering models available in DeepPavlov Library.\n",
+    "\n",
     "| Config name  | Dataset | Language | Model Size | F1 score | EM  |\n",
     "| :--- | --- | --- | --- | --- | ---: |\n",
     "| squad_bert | SQuAD v1.1 | En | 1.3 GB | 88.86 | 81.49 |\n",
@@ -193,28 +118,13 @@
     "| qa_multisberquad_bert | MultiSQuAD | Multi | 2 GB | 80.76 | 63.81 |\n",
     "| squad_ru_bert | SberQuAD | Ru | 2.0 GB | 84.71 | 66.21 |\n",
     "| squad_ru_convers_distilrubert_2L | SberQuAD | Ru | 1.2 GB | 65.20 | 44.52 |\n",
-    "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 |\n",
     "\n",
-    "# 4. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
@@ -262,13 +172,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 4.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
@@ -285,13 +190,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model.\n",
+    "\n",
     "Or make predictions for samples from *stdin*."
    ]
   },
@@ -308,35 +208,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Train the model on your data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 5. Train the model on your data\n",
     "\n",
-    "## 5.1 Train your model from Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Provide your data path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To train the model on your data, you need to change the path to the training data in the *config_file*. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "## 5.1 Train your model from Python\n",
+    "\n",
+    "### Provide your data path\n",
+    "\n",
+    "To train the model on your data, you need to change the path to the training data in the *config_file*.\n",
+    "\n",
     "Parse the *config_file* and change the path to your data from Python."
    ]
   },
@@ -402,24 +282,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SQuAD dataset info"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### SQuAD dataset info\n",
+    "\n",
     "There are *two* versions of the SQuAD dataset available for training at the moment: \n",
     "\n",
     "- [SQuAD 1.1](https://arxiv.org/abs/1606.05250) contains 107,785 question-answer pairs on 536 articles. Dataset size: `33.52 MiB`.\n",
     "\n",
-    "- [SQuAD 2.0](https://arxiv.org/abs/1806.03822) combines all of the questions from SQuAD 1.1 with over 50,000 un-answerable questions written adversarially by crowdworkers. Dataset size: `44.34 MiB`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- [SQuAD 2.0](https://arxiv.org/abs/1806.03822) combines all of the questions from SQuAD 1.1 with over 50,000 un-answerable questions written adversarially by crowdworkers. Dataset size: `44.34 MiB`.\n",
+    "\n",
     "### Train the model using new config"
    ]
   },
@@ -479,13 +349,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Evaluate "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 6. Evaluate\n",
+    "\n",
     "## 6.1 Evaluate from Python"
    ]
   },
