--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -5,14 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Few-shot Text Classification"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Few-shot Text Classification\n",
+    "\n",
     "# Table of contents \n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
@@ -39,51 +33,20 @@
     "    \n",
     "    6.1. [Evaluate from Python](#6.1-Evaluate-from-Python)\n",
     "    \n",
-    "    6.2. [Evaluate from CLI](#6.2-Evaluate-from-CLI)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Introduction to the task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Text classification__ is a task of identifying one of the pre-defined label given an utterance, where label is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Dataset"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    6.2. [Evaluate from CLI](#6.2-Evaluate-from-CLI)\n",
+    "\n",
+    "# 1. Introduction to the task\n",
+    "\n",
+    "__Text classification__ is a task of identifying one of the pre-defined label given an utterance, where label is one of N classes or \"OOS\" (out-of-scope examples - utterances that do not belong to any of the predefined classes). We consider few-shot setting, where only few examples (5 or 10) per intent class are given as a training set.\n",
+    "\n",
+    "# 2. Dataset\n",
+    "\n",
     "In our experiments we used the [CLINC150](https://paperswithcode.com/dataset/clinc150) dataset, which has 10 different domains with 15 intents each, 100 shots per intent class and 1000 OOS examples. It simulates a setting, where model has to handle many different services with wide variety of intents.\n",
     "\n",
-    "Specifically, we validate our model on CLINC150 from the original DNNC paper. We parsed it to match the format described [below](#2.1-Datasets-format). The original dataset can be downloaded from the DNNC [github page](https://github.com/salesforce/DNNC-few-shot-intent)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.1 Datasets format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Specifically, we validate our model on CLINC150 from the original DNNC paper. We parsed it to match the format described [below](#2.1-Datasets-format). The original dataset can be downloaded from the DNNC [github page](https://github.com/salesforce/DNNC-few-shot-intent).\n",
+    "\n",
+    "## 2.1 Datasets format\n",
+    "\n",
     "Train, dev and test set are separate json files, which have the following format\n",
     "\n",
     "```\n",
@@ -103,20 +66,10 @@
     "        ...\n",
     "    ]\n",
     "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Model architecture"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
+    "# 3. Model architecture\n",
+    "\n",
     "The typical methodology of few-shot text classification is to embed each example into a vector space and use an off-the-shelf distance metric to perform a similarity search. However, the text embedding methods do not discriminate the OOS examples well enough.\n",
     "\n",
     "\n",
@@ -126,27 +79,12 @@
     "\n",
     "$S(u, e_{j,i}) = \\sigma(W * h + b) \\in \\R$, where $e_{j, i} \\in E $- training set, $W \\in \\R^{1×d}$, $b \\in \\R$\n",
     "\n",
-    "To mitigate the data scarcity setting in few-shot learning, DNNC uses knowldge-transfer from NLI task. We pretrain [roberta-base](https://huggingface.co/roberta-base) on combination of 3 NLI datasets: SNLI, WNLI, MNLI."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Get started with the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1 Installation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "To mitigate the data scarcity setting in few-shot learning, DNNC uses knowldge-transfer from NLI task. We pretrain [roberta-base](https://huggingface.co/roberta-base) on combination of 3 NLI datasets: SNLI, WNLI, MNLI.\n",
+    "\n",
+    "# 4. Get started with the model\n",
+    "\n",
+    "## 4.1 Installation\n",
+    "\n",
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation.](http://docs.deeppavlov.ai/en/master/intro/installation.html)"
    ]
@@ -184,21 +122,10 @@
    "source": [
     "`dnnc_infer` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
-    "Configuration file defines the model and describes it's hyperparameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.2 Support dataset configuration"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Configuration file defines the model and describes it's hyperparameters\n",
+    "\n",
+    "## 4.2 Support dataset configuration\n",
+    "\n",
     "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training set as support dataset. It is automatically saved by *dataset_iterator*  during the training step, but you can specify your own support dataset in the in `dnnc_infer` config file. It has the same format as metioned [before](#2.1-Datasets-format)"
    ]
   },
@@ -228,28 +155,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Off-the-shelf prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Base model was already pre-trained to recognize simmilar utterances, so you can use off-the-shelf model to make predictions and evalutation. No additional training needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### OOS prediction"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Off-the-shelf prediction\n",
+    "\n",
+    "Base model was already pre-trained to recognize simmilar utterances, so you can use off-the-shelf model to make predictions and evalutation. No additional training needed.\n",
+    "\n",
+    "### OOS prediction\n",
+    "\n",
     "Out-of-scope (OOS) examples are determined via confidence_threshold parameter with the following algorithm. Firstly model calculates an average similarity score for every class from support dataset. Secondly it determines the class with maximum similarity score. Finally the model predicts class with maximum similarity if it's score is higher than confidence_threshold and \"oos\" class otherwise. The higher the threshold, the more often the model predicts \"oos\" class. By default it is set to 0.5 and you can change it to your preferences in configuration file"
    ]
   },
@@ -279,21 +190,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Use the model for prediction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5.1 Predict using Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After [installing](#4.-Get-started-with-the-model) the model, build it from the config and predict. If you set 'download' flag to 'True', then existing model weights will be overwritten. "
+    "# 5. Use the model for prediction\n",
+    "\n",
+    "## 5.1 Predict using Python\n",
+    "\n",
+    "After [installing](#4.-Get-started-with-the-model) the model, build it from the config and predict. If you set 'download' flag to 'True', then existing model weights will be overwritten."
    ]
   },
   {
@@ -321,13 +222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 5.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI."
    ]
   },
@@ -361,14 +257,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Evaluate"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# 6. Evaluate\n",
+    "\n",
     "To evaluate the model on your data, you need to change the path to the dataset in `dnnc_infer` config"
    ]
   },
@@ -431,31 +321,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.8.10 ('dnnc_env': venv)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "0856b36c2b26de82c1ead3e3019420db4ffa1511d91e779db8eb71f2314c36e4"
-   }
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
